--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,23 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
     <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                 <li><a href="">Portfolio</a></li>
-                 <li><a href="">Blog</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-greeting">Hi, I  am</h3>
-            <h1 class="banner-title">Mary Hardy</h1>
-            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn-primary header-btn">Download CV</button>
-            <button class="btn-primary">Contact</button>
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
+                <button class="btn-primary header-btn">Download CV</button>
+                <button class="btn-primary">Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -33,7 +36,10 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I'm a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I'm a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title"> Name:</p>
@@ -50,11 +56,44 @@
                 <div class="about-info">
                     <p class="info-title">From:</p>
                     <p class="info-description">Los Angeles, USA</p>
-                </div>            </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- what-i-do section start here -->
+
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="skills-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="skill-title">Vanilla JavaScript</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="">
+                        <p class="skill-title">React</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <p class="skill-title">Node.js</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <p class="skill-title">MongoDB</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
         </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
